# debrief-ai

./: .env.example  COPILOT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py  models.py  schemas.py
app/services/: knowledge_base.py  llm.py  retry.py  tts.py
app/workflow/: base_state.py  base_tools.py  edges.py  graph.py  nodes.py  pipelines.py
app/workflow/archivist/: __init__.py  edges.py  nodes.py  pipeline.py  state.py  tools.py
app/workflow/herald/: __init__.py  edges.py  nodes.py  pipeline.py  state.py  tools.py
app/workflow/inquisitor/: __init__.py  nodes.py  pipeline.py  state.py  tools.py
app/workflow/interpreter/: nodes.py  pipeline.py  state.py
app/workflow/librarian/: nodes.py  pipeline.py  state.py  tools.py
app/workflow/persona/: __init__.py  nodes.py  pipeline.py  state.py
app/workflow/researcher/: __init__.py  nodes.py  pipeline.py  state.py  tools.py
app/workflow/show_router/: __init__.py  nodes.py  pipeline.py  state.py
app/workflow/tts/: __init__.py  edges.py  nodes.py  pipeline.py  state.py  tools.py
app/workflow/writer/: __init__.py  nodes.py  state.py  (+2 more)
prompts/: herald.md  inquisitor.md  interpreter.md  librarian_prompt.md  researcher.md  router.md  ssml_generator.md
prompts/archivist/: cypher.md  cypher_read.md  cypher_write.md  node_prompt.md  relationship_prompt.md  structure_output.md
prompts/writer/: episode_conclusion.md  headline_to_show_transition.md  headline_transcript.md  planner.md  show_conclusion.md  show_intro.md  show_to_show_transition.md  writer.md
(+21 files in other folders)
