[project]
name = "debrief-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "azure-cognitiveservices-speech>=1.50.0",
    "cloudinary>=1.44.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "lxml>=5.4.0",
    "neo4j>=6.2.0",
    "newspaper4k>=0.9.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
